--- a/public/sass/abstracts/_variables.scss
+++ b/public/sass/abstracts/_variables.scss
@@ -20,7 +20,8 @@ $breakpoints-loop: (
 );
 
 $font-size: 16px;
-$text-sizes: 4, 7, 10, 12, 13, 14, 15, 16, 18, 20, 22, 24, 25, 26, 30, 40, 50, 60, 80;
+$text-sizes: 4, 7, 10, 12, 13, 14, 15, 16, 18, 20, 22, 24, 25, 26, 30, 40, 50,
+  60, 80;
 
 :root {
   @each $size in $text-sizes {
@@ -47,6 +48,7 @@ $colors: (
 
   green-1: #ebfcea,
   green-2: #008009,
+  green-3: #16a34a,
 
   yellow-1: #f8d448,
   yellow-2: #e1c03f,
@@ -56,6 +58,7 @@ $colors: (
   brown-1: #923e01,
 
   purple-1: #7e53f9,
+  purple-2: #f3e8ff,
 
   red-1: #d93025,
   red-2: #f1416c,
