--- a/public/sass/utilities/_utilities.scss
+++ b/public/sass/utilities/_utilities.scss
@@ -1165,8 +1165,8 @@ $_displays: none, inline-block, block, flex;
       top: unset;
       left: unset;
       transform: unset;
-      bottom:30px;
-      right:30px;
+      bottom: 30px;
+      right: 30px;
       // bottom: rem(30,1);
       // right: rem(30,1);
     }
@@ -1194,7 +1194,7 @@ $_displays: none, inline-block, block, flex;
     border-radius: 4px;
     padding: 0 15px;
     padding-top: 25px;
-    min-height: 70px;
+    min-height: 45px;
     transition: all 0.2s $easeOutQuart;
 
     &:focus {
@@ -1206,7 +1206,8 @@ $_displays: none, inline-block, block, flex;
   textarea:valid ~ label,
   input:focus ~ label,
   input:valid ~ label {
-    transform: translateY(-10px);
+    transform: translateY(-15px);
+    background: #fff;
   }
 }
 
@@ -1257,6 +1258,11 @@ $_displays: none, inline-block, block, flex;
 
 .w-230 {
   width: 230px;
+  max-width: 100%;
+}
+
+.w-300 {
+  width: 300px;
   max-width: 100%;
 }
 
