update rate plan

--- a/public/sass/utilities/_utilities.scss
+++ b/public/sass/utilities/_utilities.scss
@@ -379,6 +379,9 @@ $_displays: none, inline-block, block, flex;
   &-68 {
     height: 68px !important;
   }
+  &-55 {
+    height: 55px !important;
+  }
   &-50 {
     height: 50px !important;
   }
