--- a/public/sass/utilities/_utilities.scss
+++ b/public/sass/utilities/_utilities.scss
@@ -1269,6 +1269,11 @@ $_displays: none, inline-block, block, flex;
   max-width: 100%;
 }
 
+.w-500 {
+  width: 500px;
+  max-width: 100%;
+}
+
 .no-page {
   &__title {
     font-size: 200px;
