--- a/public/sass/utilities/_utilities.scss
+++ b/public/sass/utilities/_utilities.scss
@@ -391,6 +391,9 @@ $_displays: none, inline-block, block, flex;
   &-40 {
     height: 40px !important;
   }
+  &-45 {
+    height: 45px !important;
+  }
 }
 
 .w-48 {
