add & update profile & brnad page

--- a/public/sass/abstracts/_variables.scss
+++ b/public/sass/abstracts/_variables.scss
@@ -43,19 +43,21 @@ $colors: (
   light-2: #f5f5f5,
   light-3: #fbfcff,
 
-  dark-blue: #0556B3,
+  dark-blue: #0556b3,
   blue-1: #3554d1,
   blue-2: #e5f0fd,
 
   green-1: #ebfcea,
   green-2: #008009,
   green-3: #16a34a,
+  green-4: #dcfce7,
 
   yellow-1: #f8d448,
   yellow-2: #e1c03f,
   yellow-3: #ffc700,
   yellow-4: #fff8dd,
-  dark-yellow: #D97706,
+  yellow-5: #fef9c3,
+  dark-yellow: #d97706,
 
   brown-1: #923e01,
 
@@ -65,6 +67,7 @@ $colors: (
   red-1: #d93025,
   red-2: #f1416c,
   red-3: #fff5f8,
+  red-4: #fee2e2,
 
   info-1: #cde9f6,
   info-2: #4780aa,
