add admin side bar and system setting

--- a/public/sass/utilities/_utilities.scss
+++ b/public/sass/utilities/_utilities.scss
@@ -206,6 +206,9 @@ $_displays: none, inline-block, block, flex;
   &-dark-1 {
     border: 1px solid var(--color-dark-1);
   }
+  &-dark-blue {
+    border: 1px solid var(--color-dark-blue);
+  }
   &-dark-4 {
     border: 1px solid var(--color-dark-4);
   }
