--- a/public/sass/utilities/_utilities.scss
+++ b/public/sass/utilities/_utilities.scss
@@ -396,6 +396,9 @@ $_displays: none, inline-block, block, flex;
   &-20 {
     height: 20px !important;
   }
+  &-30 {
+    height: 30px !important;
+  }
   &-40 {
     height: 40px !important;
   }
