update customer support

--- a/public/sass/utilities/_utilities.scss
+++ b/public/sass/utilities/_utilities.scss
@@ -405,6 +405,12 @@ $_displays: none, inline-block, block, flex;
   &-45 {
     height: 45px !important;
   }
+  &-250 {
+    height: 250px !important;
+  }
+  &-300 {
+    height: 300px !important;
+  }
 }
 
 .w-48 {
